Updating name, description; adding readme files

--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 /*
-Theme Name: Memberlite - Coffee Theme.
-Theme URI: http://www.memberlitetheme.com/
-Description: A rich and flavorful child theme for Memberlite. 
-Author: Kim Coleman
-Author URI: http://www.paidmembershipspro.com/  
+Theme Name: Memberlite [Coffee]
+Theme URI: http://demo.memberlitetheme.com/coffee/
+Description: A rich and flavorful child theme for Memberlite
+Author: Memberlite
+Author URI: http://www.memberlitetheme.com/  
 Template: memberlite
 Version: 1.0
 License: GPL-2.0+  
